# ray_tracing

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  aabb.h  aarect.h  box.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  my_stb_image.h  perlin.h  ray.h  sphere.h  texture.h  utility.h  vec3.h
src/: CMakeLists.txt  main.cpp  main_old.txt
